# AgentMemAnalysis

./: .gitignore  .gitmodules  data_flow_evermemos.md  evermemos_lotus.py  problems.md  sem_queries.md  sol.md
lotus-simulation/: README.md  config.yaml  evermemos_lotus.py  lotus_opt_config.py  mem0_lotus.py  optimization_analysis_llama70b_40msg.txt  optimization_analysis_llama70b_80msg.txt  optimization_analysis_qwen7b_40msg.txt  pyproject.toml  rm_factory.py  sim_config.py  zep_lotus.py
