[project]
name = "lotus-simulation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.36.2",
    "lotus-ai",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "transformers>=4.57.6",
    "vllm>=0.14.0",
]

[tool.uv.sources]
lotus-ai = { path = "../lotus", editable = true }
